# kkss-backend-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  config.toml.example
migration/src/: lib.rs  m20260428_000001_add_discount_type_and_registration_reward.rs
src/: config.rs  main.rs  swagger.rs
src/entities/: discount_codes.rs  mod.rs
src/handlers/: email.rs  mod.rs
src/middlewares/: auth.rs
src/models/: discount_code.rs  email.rs  mod.rs
src/services/: auth_service.rs  discount_code_service.rs  lucky_draw_service.rs  membership_service.rs  monthly_card_service.rs  stripe_transaction_service.rs  sync_service.rs
src/tasks/: mod.rs
src/utils/: mod.rs  promo.rs
