[package]
name = "kkss-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features=["rustls"] }
actix-cors = "0.7.1"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
bcrypt = "0.17"
toml = "0.9"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11"
md5 = "0.8"
rand = "0.9"
log = "0.4"
futures-util = "0.3"
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper-rustls-webpki", "checkout", "billing", "connect", "webhook-endpoints"] }

[dependencies.migration]
path = "migration"


[workspace]
members = [".", "migration"]

